# IML_TalkieBridge

./: .gitignore  DATASET_SCHEMA.md  PROJECT_PROPOSAL.md  README.md  pyproject.toml
cache/: generation_resource_source.json  modern_token_classifier.json  primitive_autoencoder_selection.json  talkie_unofficial_api_cache.jsonl
data/: generated_questions_example.jsonl  mock_modern_terms_dictionary.json  mock_primitive_dictionary.json  modern_terms_dictionary_example.json  primitive_dictionary.json  primitive_dictionary_example.json
input_data/: manual_talkie_input_sheet_example.csv  open_ended_preprocessed_questions.csv  open_ended_preprocessed_questions.jsonl  open_ended_raw_questions.csv  open_ended_raw_questions.jsonl  open_ended_talkie_input_sheet.csv  raw_4choice_questions.jsonl
results/: component_metrics_example.csv  dataset_quality.md  final_metrics_example.csv  final_metrics_test.csv  key_comparisons.csv  key_comparisons_test.csv  manual_talkie_input_sheet.csv  open_ended_component_metrics.csv  open_ended_dataset_quality.csv  open_ended_dataset_quality.md  open_ended_judge_input_sheet.csv  open_ended_judge_integrity.csv  open_ended_judge_pairs_unblinded.csv  open_ended_judge_pairs_unblinded.jsonl  open_ended_judge_scores.csv  open_ended_judge_scores.jsonl  open_ended_live_demo.html  open_ended_pairwise_metrics.csv  open_ended_prepared_prompts.csv  open_ended_prepared_prompts.jsonl  open_ended_response_quality.md  open_ended_responses.csv  open_ended_responses.jsonl  open_ended_run_metadata.json  paired_tests.json  paired_tests_test.csv  per_item_results.jsonl  (+6 more)
(+50 files in other folders)
