[project]
name = "IML_TalkieBridge"
version = "0.1.0"
description = "Anachronism-aware prompt rewriting pipeline for Talkie-1930 evaluation"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Team 2" }]
dependencies = []

[project.scripts]
talkie-bridge = "talkie_bridge.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["talkie_bridge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
